--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.1.1",
+    "@fontsource-variable/red-hat-text": "^5.1.1",
+    "@fontsource/manrope": "^5.1.1",
     "@hotwired/stimulus": "^3.2.2",
     "@tailwindcss/vite": "^4.0.7",
     "astro": "^5.3.0",
